added nginx working nginx container and connected it to flaskDB, extensive modifications to nginx.conf, docker-compose.yaml and flaskapp. currently connected to default docker bridge ip

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -1,47 +1,68 @@
-user nginx;
-worker_processes auto;  # Auto adjust this to the number of CPU cores.
+# nginx/nginx.conf
+
+user  nginx;
+worker_processes  auto;
+
+error_log  /var/log/nginx/error.log notice;
+pid        /var/run/nginx.pid;
 
 events {
-    worker_connections 1024;  # Max number of simultaneous connections per worker.
+    worker_connections  1024;
 }
 
 http {
     include       /etc/nginx/mime.types;
     default_type  application/octet-stream;
 
-    # Logging config
-    access_log /var/log/nginx/access.log;
-    error_log /var/log/nginx/error.log;
+    log_format  main  '$remote_addr - $remote_user [$time_local] "$request" '
+                      '$status $body_bytes_sent "$http_referer" '
+                      '"$http_user_agent" "$http_x_forwarded_for"';
 
-    # Sendfile optimization of static file serving
-    sendfile on;
+    access_log  /var/log/nginx/access.log  main;
 
-    # Gzip settings for compression
-    gzip on;
-    gzip_disable "msie6";
+    sendfile        on;
+    #tcp_nopush     on;
 
-    # Main server block for serving both the frontend and proxying backend requests
+    keepalive_timeout  65;
+
+    #gzip  on;
+
+    # Load modular configuration files from the /etc/nginx/conf.d directory.
+    # See http://nginx.org/en/docs/ngx_core_module.html#include
+    # for more information.
+    include /etc/nginx/conf.d/*.conf;
+
+    # Define upstream server group
+    upstream flaskDB {
+        server 172.17.0.1:5000; # Links to docker-compuse.yaml name and port
+    }
+
     server {
-        listen 80;  # Listen on port 80 for HTTP connections.
-        server_name motherweb.net;  # Main domain
-        # Root for the frontend static files
-        root /usr/share/nginx/html;
+        listen       80 default_server;
+        listen       [::]:80 default_server;
+        server_name  localhost;
 
-        # Serve static files from Nginx
+        # React Application Root
         location / {
-            try_files $uri $uri/ /index.html;  # Serves index.html for any path not matched by a file.
+            root   /usr/share/nginx/html;
+            index  index.html index.htm;
+            try_files $uri $uri/ /index.html;
         }
 
-        # Proxy backend Flask app requests
-        location /api/ {
-            proxy_pass http://backend:5000;  # modify with compose.yami
-            proxy_http_version 1.1;
-            proxy_set_header Upgrade $http_upgrade;
-            proxy_set_header Connection "upgrade";
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_set_header X-Forwarded-Proto $scheme;
+        # Proxy requests to Python Flask Service
+        location /api/python {
+            proxy_pass         http://flaskDB;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
+        }
+
+        # Error pages
+        error_page   500 502 503 504  /50x.html;
+        location = /50x.html {
+            root   /usr/share/nginx/html;
         }
     }
 }
