--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,4 +1,5 @@
 version: '3.8'
+
 services:
   frontend:
     build:
@@ -7,59 +8,61 @@ services:
     ports:
       - "80:80"
     depends_on:
-      - backend
+      - CSharpService
+      - flaskDB
 
-  backend:
+  CSharpService:
     build:
-      context: ./server
+      context: ./server/CSharpService
       dockerfile: Dockerfile
-      environment:
-        - SQLALCHEMY_DATABASE_URI=${DATABASE_URL}
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - ConnectionStrings__Default=${DATABASE_URL}
+    ports:
+      - "5001:80"
+
+  flaskDB:
+    build: ./flaskDB
+    context: ./server/flaskDB
+    dockerfile: Dockerfile
+    environment:
+      - FLASK_ENV=development
     ports:
       - "5000:5000"
-    depends_on:
-      - db
-
-  apiVersion: apps/v1
-  kind: Deployment
-  metadata:
-    name: csharp-grpc
-  spec:
-    replicas: 3
-    selector:
-      matchLabels:
-        app: csharp-grpc
-    template:
-      metadata:
-        labels:
-          app: csharp-grpc
-      spec:
-        containers:
-          - name: csharp-grpc
-            image: "theashrose/csharp-grpc:latest"
-            ports:
-              - containerPort: 5000
+    networks:
+      -motherweb-net
 
   db:
     image: postgres:latest
     environment:
-      POSTGRES_DB: m${POSTGRES_DB}
+      POSTGRES_DB: ${POSTGRES_DB}
       POSTGRES_USER: ${POSTGRES_USER}
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
-     - "${POSTGRES_PORT}:5432"
+      - "${POSTGRES_PORT}:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data
 
-  proxy:
-    image: nginx:latest
+  nginx:
+    build: ./nginx
+    context: ./nginx
+    dockerfile: /Dockerfile
     ports:
       - "443:443"
+      - "80:80"
+      - "5000:5000"
     volumes:
-      - ./nginx.conf:/etc/nginx/nginx.conf
+      - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
+      - flaskDB
+      - CSharpService
       - frontend
-      - backend
+    networks:
+      - motherweb-net
+
+  networks:
+    motherweb-net:
+      - bridge
 
 volumes:
   postgres_data:
