ReactApp docker build succeeded, modiedfied dockerfile in /client and removed node_modules and _build from .dockerignore

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -5,12 +5,10 @@ FROM node:14 AS builder
 
 WORKDIR /app
 
-COPY ./package.json ./package-lock.json ./
+COPY ./package*.json ./
 
 RUN npm install
 
-COPY ./src ./src
-
-COPY ./public ./public
+COPY . .
 
 RUN npm run build
