got motherweb:ReactApp container to run, stable, alongside nginx and flaskDB. edited nginx.conf as well.

--- a/client/Dockerfile
+++ b/client/Dockerfile
@@ -1,6 +1,5 @@
-# client/Dockerfile
+# ReactApp Dockerfile
 
-# Stage 1: Build React App
 FROM node:14 AS builder
 
 WORKDIR /app
@@ -11,4 +10,10 @@ RUN npm install
 
 COPY . .
 
+EXPOSE 80 3000
+
 RUN npm run build
+
+RUN npm install -g serve
+
+CMD ["serve", "-s", "build", "-l", "3000"]
