--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -37,6 +37,10 @@ http {
         server 172.17.0.1:5000; # Links to docker-compuse.yaml name and port
     }
 
+        upstream ReactApp {
+        server 172.17.0.1:3000; # experimental connection setting
+    }
+
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
@@ -44,6 +48,7 @@ http {
 
         # React Application Root
         location / {
+            proxy_pass http://ReactApp;
             root   /usr/share/nginx/html;
             index  index.html index.htm;
             try_files $uri $uri/ /index.html;
