--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,40 +1,28 @@
-version: '3.8'
-
 services:
   ReactApp:
-    build: ./ReactApp
-    context: ./client
-    dockerfile: Dockerfile
+    build:
+      context: ./client
+      dockerfile: Dockerfile
+    image: motherwebnet-reactapp
     ports:
       - "80:80"
       - "3000:3000"
     depends_on:
-      - CSharpService
       - flaskDB
     networks:
-      - mother-web
+      - motherweb-net
     volumes:
       - ./client:/app
 
-  CSharpService:
-    build:
-      context: ./server/CSharpService
-      dockerfile: Dockerfile
-    environment:
-      - ASPNETCORE_ENVIRONMENT=Development
-      - ConnectionStrings__Default=${DATABASE_URL}
-    ports:
-      - "5001:80"
-
   flaskDB:
-    build: ./flaskDB
-    context: ./server/flaskDB
-    dockerfile: Dockerfile
+    build:
+      context: ./server/flaskDB
+      dockerfile: Dockerfile
+    image: motherwebnet-flaskdb
     environment:
       - FLASK_ENV=development
     ports:
       - "5000:5000"
-      - "3000:3000"
     networks:
       - motherweb-net
     volumes:
@@ -50,29 +38,32 @@ services:
     ports:
       - "${POSTGRES_PORT}:${POSTGRES_PORT}"
     volumes:
-      - postgres_data:/var/lib/postgresql/data
+      - type: bind
+        source: ./db/init.sql
+        target: /docker-entrypoint-initdb.d/init.sql
+      - type: volume
+        source: postgres_data
+        target: /var/lib/postgresql/data
 
   nginx:
-    build: ./nginx
-    context: ./nginx
-    dockerfile: /Dockerfile
+    build:
+      context: ./nginx
+      dockerfile: Dockerfile
     ports:
       - "443:443"
       - "80:80"
-      - "5000:5000"
-      - "3000:3000"
+      - "3001:3000"
     volumes:
       - ./nginx/nginx.conf:/etc/nginx/nginx.conf
     depends_on:
       - flaskDB
-      - CSharpService
       - ReactApp
     networks:
       - motherweb-net
 
 networks:
   motherweb-net:
-    - bridge
+    driver: bridge
 
 volumes:
   postgres_data:
