--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -41,6 +41,10 @@ http {
         server 172.17.0.1:3000; # experimental connection setting
     }
 
+        upstream sharpChaperone {
+        server 172.17.0.1:443; # experimental connection setting
+    }    
+
     server {
         listen       80 default_server;
         listen       [::]:80 default_server;
@@ -52,6 +56,16 @@ http {
             root   /usr/share/nginx/html;
             index  index.html index.htm;
             try_files $uri $uri/ /index.html;
+        }
+
+         # Proxy requests to C# sharpChaperone Service
+        location /api/csharp {
+            proxy_pass         http://sharpChaperone;
+            proxy_redirect     off;
+            proxy_set_header   Host $host;
+            proxy_set_header   X-Real-IP $remote_addr;
+            proxy_set_header   X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header   X-Forwarded-Proto $scheme;
         }
 
         # Proxy requests to Python Flask Service
