refreshing status of files

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - motherweb-net
     volumes:
       - ./client:/app
+      - /app/node_modules
+      - /app/build
 
   flaskDB:
     build:
