made important steps toward hot reloading for the react app.

--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -27,23 +27,33 @@ http {
 
     #gzip  on;
 
-    # Load modular configuration files from the /etc/nginx/conf.d directory.
-    # See http://nginx.org/en/docs/ngx_core_module.html#include
-    # for more information.
+    # Disables caching, note out this codeblock for deployment. Implement 
+    #proxy_buffering off;
+    #proxy_cache_bypass $http_upgrade;
+    #proxy_no_cache $http_upgrade;
+    #proxy_set_header Cache-Control "no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0";
+    #add_header Last-Modified $date_gmt;
+    #add_header Cache-Control 'no-store, no-cache, must-revalidate, proxy-revalidate, max-age=0';
+    #if_modified_since off;
+    #expires off;
+    #etag off;
+
+    # Load modular configfiles from the /etc/nginx/conf.d directory.
+    # details @ http://nginx.org/en/docs/ngx_core_module.html#include
     include /etc/nginx/conf.d/*.conf;
 
-    # Define upstream server group
+    # Define upstream server groups
     upstream flaskDB {
-        server 172.17.0.1:5000; # Links to docker-compuse.yaml name and port
+        server flaskDB:5000; # Use service name
     }
 
-        upstream ReactApp {
-        server 172.17.0.1:3000; # experimental connection setting
+    upstream ReactApp {
+        server ReactApp:3000; # Use service name to proxy to React app
     }
 
-        upstream sharpChaperone {
-        server 172.17.0.1:443; # experimental connection setting
-    }    
+    upstream sharpChaperone {
+        server sharpChaperone:5001; # Use service name
+    }
 
     server {
         listen       80 default_server;
@@ -52,13 +62,21 @@ http {
 
         # React Application Root
         location / {
-            proxy_pass http://ReactApp;
+            proxy_pass http://react-app:3000;
+            proxy_http_version 1.1;
+            proxy_set_header Upgrade $http_upgrade;
+            proxy_set_header Connection 'upgrade';
+            proxy_set_header Host $host;
+            proxy_cache_bypass $http_upgrade;
+            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+            proxy_set_header X-Real-IP $remote_addr;
+            proxy_set_header X-Forwarded-Proto $scheme;
             root   /usr/share/nginx/html;
             index  index.html index.htm;
             try_files $uri $uri/ /index.html;
         }
 
-         # Proxy requests to C# sharpChaperone Service
+        # Proxy requests to C# sharpChaperone Service
         location /api/csharp {
             proxy_pass         http://sharpChaperone;
             proxy_redirect     off;
