--- a/client/package.json
+++ b/client/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "react-scripts start --watch",
     "build": "react-scripts build",
     "test": "jest",
     "lint": "eslint ./src",
