--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,3 +1,5 @@
+version: '3.9'
+
 services:
   ReactApp:
     build:
@@ -14,7 +16,8 @@ services:
     volumes:
       - ./client:/app
       - /app/node_modules
-      - /app/build
+    environment:
+      - CHOKIDAR_USEPOLLING=true
 
   flaskDB:
     build:
