--- a/nginx/nginx.conf
+++ b/nginx/nginx.conf
@@ -62,7 +62,7 @@ http {
 
         # React Application Root
         location / {
-            proxy_pass http://react-app:3000;
+            proxy_pass http://ReactApp;
             proxy_http_version 1.1;
             proxy_set_header Upgrade $http_upgrade;
             proxy_set_header Connection 'upgrade';
